tests/test262/cases/pass/built-ins/Error/TypeError/name-message.js
const error = new TypeError('boom');
({
  name: error.name,
  message: error.message,
});
